# autochord

./: .gitignore  README.md  app.js  data_analysis.ipynb  dataloader.py  eval.ipynb  eval_seq.ipynb  index.html  progress.md  pyproject.toml  setup.cfg  setup.py  train.ipynb  train_seq.ipynb
assets/: style.css
model-development/: data_analysis.ipynb  dataloader.py  eval_seq.ipynb  model.py  progress.md  train_seq.ipynb
src/: autochord.py
src/autochord/: __init__.py
