[metadata]
name = autochord
version = 0.1.4
author = Christopher John Bayron
author_email = cjdbayron@gmail.com
description = Automatic Chord Recognition library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cjbayron/autochord
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
